# python-keyring-minimal

./: askpass  keyring-minimal  keyring-minimal-askpass  keyring.py  pyproject.toml  setup.cfg
keyring_minimal/: __init__.py  __main__.py
