[metadata]
name = keyring-minimal
version=0.1
description=A minimal libsecret keyring in python that works with keepassxc.
url=https://github.com/hrehfeld/python-keyring-minimal
author=Hauke Rehfeld
author_email=pypi.org@haukerehfeld.de
license=AGPL-3.0
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Topic :: Security
    Topic :: Software Development :: Libraries


[options]
packages = find:

[options.entry_points]
console_scripts =
    keyring-minimal = keyring_minimal:main
